生成されるAPIのメソッド名等修正
